# mdbook-termlink

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: config.rs  glossary.rs  lib.rs  linker.rs  main.rs
tests/: e2e.rs  integration.rs
tests/fixtures/: book.toml
tests/fixtures/src/: SUMMARY.md  chapter1.md  chapter_with_code.md
tests/fixtures/src/nested/: chapter2.md
tests/fixtures/src/reference/: glossary.md
