[package]
name = "mdbook-termlink"
version = "0.0.5"
edition = "2024"
rust-version = "1.88"
authors = ["Ruben Talstra"]
description = "mdBook preprocessor that auto-links glossary terms throughout documentation"
license = "MIT"
repository = "https://github.com/rubentalstra/mdbook-termlink"
keywords = ["mdbook", "preprocessor", "glossary", "documentation", "markdown"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[dependencies]
mdbook-preprocessor = "0.5"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
glob = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
